--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- navbar start -->
     <nav class="navbar">
       <div class="navbar-logo">
-        <img src="../project testing 2/img/outrunlogos.png" alt="Outrun" />
+        <img src="../img/outrunlogos.png" alt="Outrun" />
         <a href="#">Outrun</a>
       </div>
 
