--- a/index.html
+++ b/index.html
@@ -75,24 +75,24 @@
           </p>
           <a href="#">Get Started</a>
           <div class="user">
-            <img src="./project testing 2/img/user1.png" alt="user1" />
-            <img src="./project testing 2/img/user2.png" alt="user2" />
-            <img src="./project testing 2/img/user3.png" alt="user3" />
-            <img src="./project testing 2/img/user4.png" alt="user4" />
-            <img src="./project testing 2/img/user5.png" alt="user5" />
+            <img src="./img/user1.png" alt="user1" />
+            <img src="./img/user2.png" alt="user2" />
+            <img src="./img/user3.png" alt="user3" />
+            <img src="./img/user4.png" alt="user4" />
+            <img src="./img/user5.png" alt="user5" />
             <p>275+</p>
           </div>
         </div>
         <div class="image">
           <div class="icon-analitic">
             <img
-              src="./project testing 2/img/icon hero.png"
+              src="./img/icon hero.png"
               alt="icon"
               class="analitic"
             />
             <p>200+ pelanggan world wide</p>
           </div>
-          <img src="./project testing 2/img/hero image.jpg" alt="Outrun" />
+          <img src="./img/hero image.jpg" alt="Outrun" />
         </div>
       </div>
     </section>
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="about-image" data-aos="fade-right">
           <img
-            src="./project testing 2/img/about image.jpg"
+            src="./img/about image.jpg"
             alt="about-image"
           />
         </div>
@@ -177,7 +177,7 @@
         <div class="column-content">
           <div class="column" data-aos="fade-right">
             <div class="row-content">
-              <img src="./project testing 2/img/service-icon.png" alt="img" />
+              <img src="./img/service-icon.png" alt="img" />
               <div class="content-text">
                 <h2>Data Science</h2>
                 <p>
@@ -191,7 +191,7 @@
 
           <div class="column" data-aos="fade-right">
             <div class="row-content">
-              <img src="./project testing 2/img/service-icon1.png" alt="img" />
+              <img src="./img/service-icon1.png" alt="img" />
               <div class="content-text">
                 <h2>Web Development</h2>
                 <p>
@@ -205,7 +205,7 @@
 
           <div class="column" data-aos="fade-right">
             <div class="row-content">
-              <img src="./project testing 2/img/service-icon2.png" alt="img" />
+              <img src="./img/service-icon2.png" alt="img" />
               <div class="content-text">
                 <h2>Graphic Design</h2>
                 <p>
@@ -219,7 +219,7 @@
         </div>
 
         <div class="row-image" data-aos="fade-left" data-aos-duration="2000">
-          <img src="./project testing 2/img/service-image.jpg" alt="" />
+          <img src="./img/service-image.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -230,22 +230,22 @@
       <h1 data-aos="fade-down">Our Gallery</h1>
       <div class="row">
         <div class="image" data-aos="fade-right">
-          <img src="./project testing 2/img/gallery1.jpg" alt="" />
+          <img src="./img/gallery1.jpg" alt="" />
         </div>
         <div class="image" data-aos="fade-down">
-          <img src="./project testing 2/img/gallery2.jpg" alt="" />
+          <img src="./img/gallery2.jpg" alt="" />
         </div>
         <div class="image" data-aos="fade-left">
-          <img src="./project testing 2/img/gallery3.jpg" alt="" />
+          <img src="./img/gallery3.jpg" alt="" />
         </div>
         <div class="image" data-aos="fade-right">
-          <img src="./project testing 2/img/gallery4.jpg" alt="" />
+          <img src="./img/gallery4.jpg" alt="" />
         </div>
         <div class="image" data-aos="fade-down">
-          <img src="./project testing 2/img/gallery5.jpg" alt="" />
+          <img src="./img/gallery5.jpg" alt="" />
         </div>
         <div class="image" data-aos="fade-left">
-          <img src="./project testing 2/img/gallery6.jpg" alt="" />
+          <img src="./img/gallery6.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -278,7 +278,7 @@
             consectetur soluta!"
           </p>
           <div class="bio-img">
-            <img src="./project testing 2/img/user1.png" alt="" />
+            <img src="./img/user1.png" alt="" />
             <div class="bio-text">
               <h3>Lucy H.</h3>
               <p class="bio-person">Lorem ipsum dolor sit.</p>
@@ -298,7 +298,7 @@
             consectetur soluta!"
           </p>
           <div class="bio-img">
-            <img src="./project testing 2/img/user2.png" alt="" />
+            <img src="./img/user2.png" alt="" />
             <div class="bio-text">
               <h3>Aa Mamad</h3>
               <p class="bio-person">Lorem ipsum dolor sit.</p>
